# MTools

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  COPYING.txt  CPackConfig.cmake.in  MToolsConfig.cmake.in  README.rst
doc/: CMakeLists.txt  conf.py.in
doc/rst/: about.rst  index.rst
